compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nfn wobble() -> Int {\n    5\n}\n\nfn run(one: fn() -> String) {\n    one()\n}\n\nfn demo() {\n    run(wobble)\n}"
---
----- SOURCE CODE

fn wobble() -> Int {
    5
}

fn run(one: fn() -> String) {
    one()
}

fn demo() {
    run(wobble)
}

----- ERROR
error: Type mismatch
   ┌─ /src/one/two.gleam:11:9
   │
11 │     run(wobble)
   │         ^^^^^^

Expected type:

    fn() -> String

Found type:

    fn() -> Int
